# almanime-backend-fastapi

./: .pylintrc  Dockerfile  README.md  README.rst  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py  settings.py  utils.py
app/migrations/: env.py
app/migrations/versions/: da3e8c5bb976_create_anime_table.py
app/models/: anime.py  base.py  enums.py
app/repositories/: anime.py  database.py
app/repositories/entities/: __init__.py  anime.py  base.py
scripts/: almcli.py  project.py
scripts/commands/: update_animes.py
